testdata/language-features/basic-list/list16.reject.out
type error: can not unify
[32m'List 'Char[m
with
[32m'Char[m

in "testdata/language-features/basic-list/list16.reject.lc" (line 1, column 13):
value = 'h':'i'
            ^^^
